js/src/tests/test262/built-ins/Promise/reject/name.js
assert
.
sameValue
(
Promise
.
reject
.
name
'
reject
'
)
;
verifyNotEnumerable
(
Promise
.
reject
'
name
'
)
;
verifyNotWritable
(
Promise
.
reject
'
name
'
)
;
verifyConfigurable
(
Promise
.
reject
'
name
'
)
;
reportCompare
(
0
0
)
;
